--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.9.13",
     "react": "latest",
     "react-dom": "latest",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
     "@types/node": "latest",
