feat: Implement user authentication flow with email verification and product scraping functionality
- Added API route for email verification with token validation and user update.
- Created API route for scraping Amazon product details with rate limiting.
- Developed login and registration pages with user feedback messages.
- Implemented email verification page to handle verification status.
- Built dashboard to display tracked products and user information.
- Added loading and pagination components for better user experience.
- Established protected routes to secure dashboard and product pages.
- Integrated JWT for user authentication and verification token generation.
- Set up environment variable validation and application configuration.
- Created user and verification token models for MongoDB.
- Implemented rate limiting for scraping and authentication requests.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ yarn-error.log*
 next-env.d.ts
 
 .env
+
+# documentation files (local reference only)
+README_NEW.md
+IMPLEMENTATION_SUMMARY.md
+FILE_CHANGES_SUMMARY.md
+FEATURE_GUIDE.md
+CHECKLIST.md
+FINAL_SUMMARY.md
+QUICK_REFERENCE.md
+
+# IDE and OS files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.code-workspace
+
+# logs
+logs/
+*.log
