--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-responsive-carousel": "^3.2.23",
+    "resend": "^6.6.0",
     "supports-color": "^8.1.1"
   },
   "devDependencies": {
